--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "start:prod": "pm2 restart pm2.config.js --env production",
+    "serve": "gatsby serve -p $PORT",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
