--- a/.github/ workflows/release.js.yml
+++ b/.github/ workflows/release.js.yml
@@ -1,5 +1,5 @@
-name: Stage Release
-on:
+name: Release
+"on":
   push:
     branches:
       - master
@@ -8,36 +8,37 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version:
+          - 12.x
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install Packages
-      run: npm install
-		- name: Building
-			run: npm run build
+      - uses: actions/checkout@v2
+      - name: "Use Node.js ${{ matrix.node-version }}"
+        uses: actions/setup-node@v1
+        with:
+          node-version: "${{ matrix.node-version }}"
+      - name: Install Packages
+        run: npm install
+      - name: Build page
+        run: npm run build
   deploy:
-    needs: [test]
+    needs:
+      - test
     runs-on: ubuntu-latest
-
     steps:
-    - name: SSH and deploy node app
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script: |
-          cd ~/vcteam/vc-blog-gatsby/
-          git checkout --f master
-          git remote prune origin
-          git pull
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-          npm i
-          npm run build
-          npm run start:prod
+      - name: SSH and deploy node app
+        uses: appleboy/ssh-action@master
+        with:
+          host: "${{ secrets.SSH_HOST }}"
+          username: "${{ secrets.SSH_USERNAME }}"
+          key: "${{ secrets.SSH_KEY }}"
+          port: "${{ secrets.SSH_PORT }}"
+          script: |
+            cd ~/apps/GAM-PMS-WebFront
+            git checkout --f master
+            git remote prune origin
+            git pull
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            npm i
+            npm run build
+            cp -r ./dist/* /var/www/pms-web
